# alpha-trading-bot-okx

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile_base  Dockerfile_base.alpine  Dockerfile_base.optimized  LICENSE  README.md  bak_opencode.jsonc  docker-compose.yml  main.py  opencode.jsonc  pyproject.toml  requirements.txt  test_migration.py
.codegraph/: daemon.pid
.github/workflows/: ci.yml
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
.superpowers/sdd/: task-5-report.md
alpha_trading_bot/: __init__.py  main.py  realtime_monitor.py
alpha_trading_bot/ai/: __init__.py  adaptive_buy_condition.py  btc_price_detector.py  buy_signal_optimizer.py  cache_monitor.py  client.py  config_manager.py  dynamic_cache.py  dynamic_sell_condition.py  dynamic_signal_tier.py  enhanced_price_detector.py  fusion.py  high_price_buy_optimizer.py  high_price_protection.py  integration.py  integrator.py  integrator_config.py  manager.py  manager.py.backup  market_structure.py  model_selector.py  price_position_scaler.py  prompt_builder.py  prompt_context.py  prompt_optimizer.py  provider_utils.py  providers.py  response_parser.py  risk_reward_calculator.py  self_learning_optimizer.py  signal_optimizer.py  signals.py  sustained_decline_detector.py  trend_reversal_detector.py
alpha_trading_bot/ai/adaptive/: market_regime.py  parameter_manager.py  performance_tracker.py  risk_manager.py  rules_engine.py  strategy_library.py  strategy_selector.py
alpha_trading_bot/alphapulse/: config.py  data_manager.py  engine.py  market_monitor.py  signal_metrics.py  tiered_storage.py
alpha_trading_bot/api/: __init__.py  bot_api.py  client.py
alpha_trading_bot/cli/: __init__.py  main.py
alpha_trading_bot/config/: __init__.py  manager.py  models.py  thresholds.py
alpha_trading_bot/core/: __init__.py  adaptive_bot.py  adaptive_stop_loss.py  base.py  bot.py  cycle_timing.py  decision_engine.py  exceptions.py  health_check.py  ml_optimization_task.py  monitor.py  opportunity_audit.py  param_applier.py  position_close_audit.py  position_manager.py  position_recovery.py  signal_processor.py  state_persistence.py  stop_loss_manager.py  strategy_weight_manager.py  take_profit_calculator.py  trading_scheduler.py  trading_state_machine.py
alpha_trading_bot/data/: __init__.py
alpha_trading_bot/exchange/: __init__.py  account_service.py  client.py  engine.py  instrument_service.py  market_data.py  models.py  okx_raw.py  order_service.py  raw_executor.py  trade_executor.py
alpha_trading_bot/realtime/: __init__.py  conservative_trader.py  quick_signal_analyzer.py
alpha_trading_bot/strategies/: __init__.py  consolidation.py  crash_recovery.py  crash_recovery_manager.py  intelligent_signal_filter.py  low_price_strategy.py  manager.py
alpha_trading_bot/utils/: __init__.py  cache.py  crash_detector.py  data_validation.py  error_recovery.py  logging.py  monitoring.py  observability.py  price_calculator.py  smart_logger.py  technical.py  time_helper.py
config/: prompt_optimizer.yaml
examples/: advanced_usage.py  basic_usage.py  config_example.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
markdown/: ADAPTIVE_STOP_LOSS_GUIDE.md  AI_OPTIMIZATION_SUMMARY.md  AI_PROMPTS.md  AI_PROMPTS_UPDATED.md  AI模型选择建议.md  ALPHAPULSE_ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BTC_TRADING_REALTIME_OPTIMIZATION.md  CONFIG_CONTROL_RELATIONSHIP.md  CRASH_DETECTION_MONITORING.md  CRASH_DETECTION_STATUS.md  CRASH_PROTECTION_ANALYSIS.md  CRASH_PROTECTION_IMPROVEMENTS.md  DATA_MANAGER_ISSUE_ANALYSIS.md  DEPENDENCY_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DOCKERFILE_OPTIMIZATION.md  DOCKER_DEPENDENCY_FIX.md  IMMEDIATE_DEPLOYMENT.md  INITIALIZATION_FIX_SUMMARY.md  LORA_TRAINING_GUIDE.md  ML_INTEGRATION_GUIDE.md  PRICE_POSITION_SCALING_GUIDE.md  QUICK_FIX_GUIDE.md  RELEASE_READINESS_REPORT_GEMINI_HARNESS.md  SECURITY_KEY_ROTATION_RUNBOOK.md  SECURITY_REMEDIATION_LEDGER.md  STARTUP_FIX_SUMMARY.md  STARTUP_GUIDE.md  TP_SL_CONFIGURABLE_SUMMARY.md  btc_交易中_qwen_deep_seek_kimi_的_ai_决策优劣势分析.md  角色化AI决策系统设计方案.md
scripts/: build_and_push.sh  rollback_gemini.sh  run.sh  setup.sh  start_bot.sh
tests/: conftest.py
tests/unit/: test_adaptive_bot_cooldown.py  test_adaptive_bot_position_sync.py  test_adaptive_buy_new_modes.py  test_adaptive_execution_safety.py  test_adaptive_stop_loss_retry.py  test_ai_hold_override_metrics.py  test_api.py  test_config.py  test_config_updater_weights.py  test_core.py  test_cycle_log_optimization.py  test_cycle_timing.py  test_decision_engine_hold_override.py  test_decision_engine_rr.py  test_decision_tree_full.py  test_deepseek_response_parse.py  test_dependency_metadata.py  test_exchange_leverage.py  test_exchange_raw_endpoints.py  test_gemini_integration.py  test_instrument_service.py  test_instrument_spec.py  test_live_trading_guard.py  test_market_data_ticker.py  test_market_structure.py  test_ml_dynamic_weights.py  test_opportunity_audit.py  test_order_confirmation.py  test_position_close_audit.py  test_prompt_builder.py  test_risk_control_manager.py  test_risk_manager_p3_full.py  test_risk_params.py  test_risk_reward_calculator.py  test_rules_engine_params.py  test_rules_engine_volatility.py  test_smart_stop_loss.py  test_startup_logging_noise.py  test_state_directory_isolation.py  test_stop_loss_all_paths.py  (+6 more)
(+70 files in other folders)
