[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-trading-bot-okx"
version = "3.0.0"
description = "基于模块化架构的OKX加密货币交易机器人"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alpha Trading Team", email = "team@alphatrading.com"}
]
keywords = ["cryptocurrency", "trading", "bot", "okx", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "dataclasses>=0.6;python_version<'3.7'",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "aiodns>=3.0.0",
]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    "pandas>=1.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alphatrading/alpha-trading-bot-okx"
Documentation = "https://alpha-trading-bot-okx.readthedocs.io"
Repository = "https://github.com/alphatrading/alpha-trading-bot-okx"
"Bug Tracker" = "https://github.com/alphatrading/alpha-trading-bot-okx/issues"

[project.scripts]
alpha-bot = "alpha_trading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_trading_bot*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
    "streamlit.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=alpha_trading_bot --cov-report=term-missing"