[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-trading-bot-okx"
version = "3.0.0"
description = "基于模块化架构的OKX加密货币交易机器人"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alpha Trading Team", email = "team@alphatrading.com"}
]
keywords = ["cryptocurrency", "trading", "bot", "okx", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.0.0,<5.0.0",
    "numpy>=1.25.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "optuna>=3.0.0,<5.0.0",
]

[project.optional-dependencies]
ai = [
    # "openai>=1.0.0",  # 当前通过HTTP API调用，未使用官方SDK
]
web = [
    # "streamlit>=1.28.0",  # 如需Web界面可取消注释
    # "plotly>=5.0.0",      # 如需图表功能可取消注释
]
dev = [
    "pytest>=7.0.0,<10.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "black>=23.0.0,<26.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[project.urls]

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_trading_bot*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
    "streamlit.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=alpha_trading_bot --cov-report=term-missing"
